<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    android:background="@drawable/gradientlist"
    tools:context=".Register">

    <EditText
        android:id="@+id/username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:hint="@string/_hint"
        tools:ignore="Autofill,TextFields,TouchTargetSizeCheck,TextContrastCheck" />

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/username"
        android:layout_marginTop="50dp"
        android:hint="@string/password"
        tools:ignore="Autofill,TextFields,TouchTargetSizeCheck,TextContrastCheck" />

    <EditText
        android:id="@+id/repassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/password"
        android:layout_marginTop="50dp"
        android:hint="@string/retype_password"
        tools:ignore="Autofill,TextFields,TouchTargetSizeCheck,TextContrastCheck" />

    <Button
        android:id="@+id/btnsignup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:layout_marginTop="50dp"
        android:layout_below="@+id/repassword"/>

    <Button
        android:id="@+id/btnsignin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/existing_user_go_to_sign_in_page"
        android:layout_marginTop="50dp"
        android:layout_below="@+id/btnsignup"/>

</RelativeLayout>