<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradientlist"
    android:padding="10dp"
    tools:context=".Login">

    <EditText
        android:id="@+id/username1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:hint="@string/user_name_login"
        android:importantForAutofill="no"
        tools:ignore="TextContrastCheck,TextFields,TouchTargetSizeCheck" />

    <EditText
        android:id="@+id/password1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/username1"
        android:layout_marginTop="50dp"
        android:hint="@string/password_login"
        tools:ignore="TextContrastCheck,TextFields,TouchTargetSizeCheck"
        android:importantForAutofill="no" />

    <Button
        android:id="@+id/btnsignin1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sign_in_btn"
        android:layout_marginTop="50dp"
        android:layout_below="@+id/password1"/>
</RelativeLayout>