<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@drawable/gradientlist"
    android:id="@+id/mainMenuLayout"
    android:layout_height="match_parent"
    tools:context=".MainMenu">

    <TextView
        android:id="@+id/tvMeniuPrincipal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bine_ai_venit_in_meniul_principal"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.187" />

    <Button
        android:id="@+id/btnViewTimbreFirebase"
        android:layout_width="180dp"
        android:layout_height="50dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="152dp"
        android:layout_marginEnd="279dp"
        android:background="@drawable/btn_shape"
        android:text="@string/mainMenuTimbreDetinute"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.323"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/btnAdaugaTimbru"
        android:layout_width="180dp"
        android:layout_height="50dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="224dp"
        android:layout_marginEnd="188dp"
        android:background="@drawable/btn_shape"
        android:text="@string/mainMenu_adauga_timbru"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.396"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/btnAdaugaEveniment"
        android:layout_width="180dp"
        android:layout_height="50dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="173dp"
        android:background="@drawable/btn_shape"
        android:text="@string/mainMenu_adauga_eveniment"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.7"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/btnVizualizeazaImagini"
        android:layout_width="180dp"
        android:layout_height="50dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="229dp"
        android:background="@drawable/btn_shape"
        android:text="@string/imagini_main_menu"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.834"
        tools:ignore="TextContrastCheck" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="145dp"
        android:layout_height="149dp"
        android:layout_marginStart="23dp"
        android:layout_marginTop="161dp"
        android:contentDescription="@string/fip"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.905"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.384"
        app:srcCompat="@mipmap/fp_foreground"
        tools:ignore="ImageContrastCheck" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="140dp"
        android:layout_height="146dp"
        android:contentDescription="@string/romanian_philatelic_federation_1891"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.896"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.806"
        app:srcCompat="@mipmap/romanianfilatelia_foreground" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabRating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:contentDescription="@string/feedback"
        android:focusable="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.876"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.346"
        app:srcCompat="@android:drawable/btn_star_big_on"
        tools:ignore="SpeakableTextPresentCheck,ImageContrastCheck" />

    <Button
        android:id="@+id/btnColectii"
        android:layout_width="180dp"
        android:layout_height="50dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="229dp"
        android:background="@drawable/btn_shape"
        android:text="@string/colectii_timbre"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.938"
        tools:ignore="TextContrastCheck" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabNotes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:contentDescription="@string/notes"
        android:focusable="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.653"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.346"
        app:srcCompat="@mipmap/note" />


</androidx.constraintlayout.widget.ConstraintLayout>