<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".MainActivity">

    <!--Linear Layout with horizontal orientation
        and other properties-->
    <LinearLayout
        android:id="@+id/layout_button"
        android:orientation="horizontal"
        android:layout_alignParentTop="true"
        android:weightSum="2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <!--Button for choosing image from gallery-->
        <Button
            android:id="@+id/btnChoose"
            android:text="@string/alege_imagine_timbru"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            style="?android:attr/buttonBarButtonStyle" />

        <!--Button for uploading image-->
        <Button
            android:id="@+id/btnUpload"
            android:text="@string/incarca_in_firebase"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            style="?android:attr/buttonBarButtonStyle" />
    </LinearLayout>

    <!--Image View for showing image chosen from gallery-->
    <ImageView
        android:id="@+id/imgView"
        android:layout_width="364dp"
        android:layout_height="525dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="15dp"
        android:layout_marginTop="70dp"
        android:layout_marginEnd="16dp"
        android:contentDescription="@string/imagine_timbru_imgView" />
</RelativeLayout>